--- a/Aufgabe10.08/pom.xml
+++ b/Aufgabe10.08/pom.xml
@@ -11,4 +11,15 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
     <name>Aufgabe10.08</name>
+    
+    
+    <dependencies>
+        <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.9.8</version>
+        </dependency>
+    </dependencies>
+    
 </project>
+
